# PicFlip

./: README.md  package-lock.json
pic_flip/: package-lock.json  package.json
pic_flip/src/: App.tsx
pic_flip/src-tauri/: Cargo.toml  tauri.conf.json
pic_flip/src-tauri/src/: main.rs
pic_flip/src/components/DragDropBox/: Box.css  Box.tsx
pic_flip/src/components/OutputPicType/: OutputPicType.css  OutputPicType.tsx
pic_flip/src/screens/: Main.css  Main.tsx
